# YOLO8

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  eval.yaml  evaluate.py  export.py  finetuning.py  infer.py  infer.yaml  live.py  model1.py  predict.py  prompt.md  pyproject.toml  requirements.txt  train.py  train.yaml  videocap.md
configs/: eval.yaml  export.yaml  finetuning.yaml  train.yaml
cpu/configs/: eval.yaml  export.yaml  train.yaml
docs/: en_concepts.md  fr_concepts.md
docs/metrics/: yolov8_metriques.tex
gpu/configs/: eval.yaml  finetuning.yaml  hdf5.yaml  train.yaml
module/: __init__.py  config.py  dataset.py  evaluate.py  export.py  finetuning.py  infer.py  metrics.py  metrics_eval.py  model.py  train.py  utils.py
numpr2/: export.yaml  finetuning.yaml  train.yaml
rust/yololivers/src/: main.rs
rust/yolov8rust/: Cargo.toml
rust/yolov8rust/src/: main.rs
src/yolov8/: __init__.py  config.py  dataset.py  devices.py  evaluate.py  export.py  finetuning.py  logging.py  lossfn.py  metrics.py  model.py  onnx_export.py  plotting.py  utils.py
src/yolov8/dataset/: __init__.py  adapter.py  augment.py  factory.py  hdf5_store.py  names.py  scanner.py  sources.py  transforms.py  validation.py  yolo_dataset.py
src/yolov8/entrypoints/: buildds.py  evaluate.py  export.py  exportmodel.py  finetuning.py  infer.py  inference.py  train.py
src/yolov8/metrics/: __init__.py  ap.py  boxes.py  evaluation.py  nms.py
src/yolov8/modules/: __init__.py  anchors.py  backbone.py  c2f.py  conv.py  dfl.py  head.py  neck.py  scaling.py  sppf.py  upsample.py
src/yolov8/training/: __init__.py  checkpoints.py  ema.py  lr_schedulers.py  meters.py  optimizers.py  runs.py  trainer.py
tests/: conftest.py  test_adapter.py  test_config.py  test_dataset.py  test_lossfn.py  test_metrics.py  test_model.py  test_runs.py  test_schedulers.py  test_trainer.py
yololivers/: Cargo.toml
yolov8/: config.py  dataset.py  export.py  infer.py  logger_cfg.py  lossfn.py  train.py  utils.py
yolov8rust/: .gitignore  Cargo.toml
yolov8rust/src/: main.rs
