[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "YOLO8"
version = "0.1.0"
description = "Open source YOLO model implementation from scratch in PyTorch"
readme = "README.md"
authors = [
    { name = "DOCTOR MOKIRA", email = "dr.mokira@gmail.com" },
]
maintainers = [
    { name = "CONSOLE ART CYBERNETIC", email = "ca.cybernetic@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
keywords = ["object-detection", "yolov8", "conv-net", "iou", "deep-learning"]
dependencies = [
	"pyyaml==6.0.3",
    "loguru==0.7.3",
    "python-dotenv==1.0.0",
    "tqdm==4.67.1",
    "pandas==2.3.3",
    "matplotlib==3.10.8",
    "pillow==12.1.1",
    "opencv-python==4.12.0.88",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchinfo==1.8.0",
    "onnx==1.21.0",
    "onnxruntime==1.23.2",
    "onnxsim==0.6.2",
    "onnxconverter-common==1.16.0",
]

requires-python = ">=3.10"
[project.optional-dependencies]
dev = [
    "ipython",
    "pytest==8.2"
]

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 2
column_limit = 120

[project.urls]
"Homepage" = "https://github.com/cacybernetic/YOLO8"
#"Bug Tracker" = "https://github.com/your-username/my-python-package/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
yltrain = "yolov8.entrypoints.train:main"
yleval = "yolov8.entrypoints.evaluate:main"
ylinfer = "yolov8.entrypoints.infer:main"
ylft = "yolov8.entrypoints.finetuning:main"
ylexport = "yolov8.entrypoints.export:main"
